# altcha-lib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  publish.yml
examples/: server.rs
examples/server/: Cargo.toml
src/: algorithm.rs  error.rs  lib.rs  utils.rs
