[package]
name = "altcha-lib-rs"
version = "0.1.0"
edition = "2021"
authors = ["jmic <jmic@users.noreply.github.com>"]
description = "Community implementation of the Altcha library in Rust for your own server applications to create and validate challenges and responses."
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["json"]

[dependencies]
chrono = "0.4"
rand = "0"
sha2 = "0"
base16ct = { version = "0.2", features = ["alloc"] }
sha1 = "0"
hmac = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["serde_json"]

[dev-dependencies]
actix-web = "4"
base64 = "0.22"